--- a/css/styles.css
+++ b/css/styles.css
@@ -356,3 +356,53 @@ padding: 0 15px;
     list-style: none;
     text-align: left;
 }
+
+.footer-right {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.social-title {
+    font-weight: 500;
+    font-size: 16px;
+    margin-bottom: 16px;
+    color: #ffffff;
+}
+
+.social-icons {
+    display: flex;
+    gap: 16px;
+}
+
+.social-link {
+    display: flex;
+    width: 40px;
+    height: 40px;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    justify-content: center;
+    align-items: center;
+    transition: background-color 0.3s ease;
+}
+
+.social-link:hover {
+    background-color: #ffffff;
+}
+
+.icon {
+    fill: #ffffff;
+    transition: fill 0.3s ease;
+}
+
+.icon-wrapper {
+    display: flex;      
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 8px;
+}
+
+.social-link:hover .icon {
+    fill: #4d5ae5;
+}
+
