--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,9 @@ a {
     display: flex;
     justify-content: space-between;
     padding: 24px 0;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 1px 6px rgba(46, 47, 66, 0.08);
       }
 
 .container { 
@@ -125,8 +128,24 @@ padding: 0 15px;
         letter-spacing: 0.02em;
         color: #2e2f42;
         padding: 24px 0;
+        position: relative;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.nav-link.current {
+    color: #404bbf;
+}
+
+.nav-link.current::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    width: 100%;
+    height: 4px;
+    background-color: #404bbf;
+    border-radius: 2px;
+}
 
 
 .contacts {
@@ -146,6 +165,7 @@ padding: 0 15px;
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #434455;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-link:hover,
