--- a/css/styles.css
+++ b/css/styles.css
@@ -40,10 +40,7 @@ a {
     display: flex;
     justify-content: space-between;
     padding: 24px 0;
-    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
-        0px 1px 1px rgba(46, 47, 66, 0.16),
-        0px 1px 6px rgba(46, 47, 66, 0.08);
-      }
+          }
 
 .container { 
 max-width: 1158px;
@@ -54,6 +51,9 @@ padding: 0 15px;
 .page-header {
     background-color: #fff;
     border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+                0px 1px 1px rgba(46, 47, 66, 0.16),
+                0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-nav {
@@ -287,6 +287,9 @@ padding: 0 15px;
        border-radius: 0 0 4px 4px;
        overflow: hidden;
        text-align: center;
+       box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+                   0px 1px 1px rgba(46, 47, 66, 0.16),
+                   0px 2px 1px rgba(46, 47, 66, 0.08);
    }
 
 .card-team {
@@ -390,7 +393,7 @@ padding: 0 15px;
     height: 100%;
     padding: 40px 32px;
     background-color: #4d5ae5;
-    color: var(--cloud, #f4f4fd);
+    color: #f4f4fd;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
@@ -467,7 +470,12 @@ padding: 0 15px;
 }
 
 .icon {
-    fill: #ffffff;
+    display: flex;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    justify-content: center;
+    align-items: center;
     transition: fill 0.3s ease;
 }
 
