--- a/css/styles.css
+++ b/css/styles.css
@@ -448,20 +448,26 @@ padding: 0 15px;
 
 
 
-.social-icons {
+.social-icon {
     display: flex;
     gap: 16px;
-    
-}
+    justify-content: center;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    fill: #ffffff;
+    transition: fill 250ms ease;
+   }
 
 .social-link {
     display: flex;
-    width: 40px;
-    height: 40px;
+    width: 100%;
+    height: 100%;
     border-radius: 50%;
     justify-content: center;
     align-items: center;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    background-color: #4d5ae5;
+    transition: background-color 250ms ease;
 }
 
 .social-link:hover,
@@ -499,3 +505,7 @@ padding: 0 15px;
     fill: #4d5ae5;
 }
 
+.social-item {
+ width: 40px;
+ height: 40px;
+   }
