--- a/css/styles.css
+++ b/css/styles.css
@@ -364,6 +364,7 @@ padding: 0 15px;
 
 .gallery-list {
     display: flex;
+    flex-wrap: wrap;
     gap: 24px;
     justify-content: center;
     padding: 0px;
@@ -448,7 +449,7 @@ padding: 0 15px;
 
 
 
-.social-icon {
+.social-list
     display: flex;
     gap: 16px;
     justify-content: center;
@@ -503,6 +504,11 @@ padding: 0 15px;
 
 .social-link:hover .icon {
     fill: #4d5ae5;
+}
+
+.social-link:hover svg,
+.social-link:focus svg {
+    fill: #ffffff;
 }
 
 .social-item {
