--- a/css/styles.css
+++ b/css/styles.css
@@ -328,22 +328,27 @@ padding: 0 15px;
     display: flex;
     gap: 24px;
     justify-content: space-between;
-    margin: 0 156px;
+    margin: 0 auto;
     margin-bottom: 8px;
+    flex-wrap: wrap;
          }
 
 .about-item { 
     width: calc((100% - 72px) / 4);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
 }
 
 .title {
     font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-    margin-bottom: 8px;
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 1.2;
+        letter-spacing: 0.02em;
+        color: #2e2f42;
+        margin-bottom: 8px;
          }
 .text {
     font-family: "Roboto", sans-serif;
@@ -449,7 +454,7 @@ padding: 0 15px;
 
 
 
-.social-list
+.social-list {
     display: flex;
     gap: 16px;
     justify-content: center;
@@ -487,14 +492,17 @@ padding: 0 15px;
 }
 
 .icon-wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 112px;
-    background-color: #f4f4fd;
-    border-radius: 4px;
-    border: 1px solid #8e8f99;
-    margin-bottom: 8px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 112px;
+        width: 100%;
+        max-width: 264px;
+        background-color: #f4f4fd;
+        border-radius: 4px;
+        border: 1px solid #8e8f99;
+        margin-bottom: 8px;
+    }
 }
 
 .icon-about {
