--- a/css/styles.css
+++ b/css/styles.css
@@ -419,7 +419,7 @@ padding: 0 15px;
 
 .footer-container {
   display: flex;
-  align-items: baseline;
+  align-items: flex-start;
   justify-content: space-between;
         }
 
@@ -463,22 +463,23 @@ padding: 0 15px;
     list-style: none;
     fill: #ffffff;
     transition: fill 250ms ease;
-   }
+      }
+     
 
 .social-link {
     display: flex;
     width: 100%;
     height: 100%;
+    background-color: #4d5ae5;
     border-radius: 50%;
     justify-content: center;
     align-items: center;
-    background-color: #4d5ae5;
-    transition: background-color 250ms ease;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-link:hover,
 .social-link:focus {
-    background-color: #404bbf;
+    background-color: #31d0aa;
 }
 
 .icon {
@@ -489,6 +490,7 @@ padding: 0 15px;
     justify-content: center;
     align-items: center;
     transition: fill 0.3s ease;
+    fill: #f4f4fd;
 }
 
 .icon-wrapper {
@@ -523,3 +525,7 @@ padding: 0 15px;
  width: 40px;
  height: 40px;
    }
+
+.social-icon {
+    fill: #f4f4fd;
+}
