--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,7 @@
-/* #region border box */
+:root {
+    --cloud: #f4f4fd;
+}
+
 *,
 *::before,
 *::after {
@@ -454,27 +457,35 @@ padding: 0 15px;
 
 
 
-.social-list {
+.team-social-list {
     display: flex;
-    gap: 16px;
     justify-content: center;
+    align-items: center;
+    gap: 24px;
     padding: 0;
     margin: 0;
-    list-style: none;
-    fill: #ffffff;
-    transition: fill 250ms ease;
-      }
+}
+
+.social-list {
+        display: flex;
+        flex-direction: row;
+        gap: 16px;
+        padding: 0;
+        margin: 0;
+        justify-content: center;
+       
+}
      
 
 .social-link {
     display: flex;
     width: 100%;
     height: 100%;
-    background-color: #4d5ae5;
     border-radius: 50%;
     justify-content: center;
     align-items: center;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    background-color: #4d5ae5;
+    transition: background-color 250ms ease;
 }
 
 .social-link:hover,
@@ -525,7 +536,14 @@ padding: 0 15px;
  width: 40px;
  height: 40px;
    }
-
 .social-icon {
-    fill: #f4f4fd;
+    width: 24px;
+    height: 24px;
+    fill: var(--cloud);
+}
+
+.icon,
+.social-icon {
+    fill: var(--cloud);
+        
 }
