--- a/css/styles.css
+++ b/css/styles.css
@@ -422,19 +422,24 @@ padding: 0 15px;
 
 .footer-container {
   display: flex;
-  align-items: flex-start;
   justify-content: space-between;
+  align-items: baseline
         }
 
-.footer-right {
+.footer-left {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    margin-right: 120px;
 }
 
 .footer-social {
     display: flex;
     flex-direction: column;
+}
+
+.footer-social .social-link {
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-social .social-title {
@@ -485,7 +490,7 @@ padding: 0 15px;
     justify-content: center;
     align-items: center;
     background-color: #4d5ae5;
-    transition: background-color 250ms ease;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-link:hover,
@@ -539,11 +544,11 @@ padding: 0 15px;
 .social-icon {
     width: 24px;
     height: 24px;
-    fill: var(--cloud);
+    fill: #f4f4fd;
 }
 
 .icon,
 .social-icon {
-    fill: var(--cloud);
+    fill: #f4f4fd;
         
 }
