--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,3 @@
-:root {
-    --cloud: #f4f4fd;
-}
 
 *,
 *::before,
@@ -393,6 +390,14 @@ padding: 0 15px;
     background-color: #ffffff;
     list-style: none;
     text-align: left;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-item:hover,
+.portfolio-item:focus-within {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+                0px 1px 1px rgba(46, 47, 66, 0.16),
+                0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-overlay {
@@ -440,6 +445,11 @@ padding: 0 15px;
 
 .footer-social .social-link {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-social .social-link:hover,
+.footer-social .social-link:focus {
+    background-color: #31d0aa;
 }
 
 .footer-social .social-title {
@@ -496,7 +506,7 @@ padding: 0 15px;
 
 .social-link:hover .social-icon,
 .social-link:focus .social-icon {
-    fill: #ffffff !important;
+    fill: #ffffff;
 }
 
 .icon {
@@ -545,7 +555,7 @@ padding: 0 15px;
 .social-icon {
     width: 24px;
     height: 24px;
-    fill: #f4f4fd !important;
+    fill: #f4f4fd;
 }
 
 .icon,
