--- a/css/styles.css
+++ b/css/styles.css
@@ -178,6 +178,7 @@ margin: 0 auto;
 
 .section-hero {
         background-color: #2e2f42;
+        max-width: 1440px;
         min-height: 600px;
         display: flex;
         align-items: center;
@@ -522,8 +523,7 @@ margin: 0 auto;
     justify-content: center;
     align-items: center;
     transition: fill 0.3s ease;
-    fill: #f4f4fd;
-}
+     }
 
 .icon-wrapper {
         display: flex;
@@ -553,6 +553,8 @@ margin: 0 auto;
     fill: #ffffff;
 }
 
+
+
 .social-item {
  width: 40px;
  height: 40px;
@@ -561,16 +563,15 @@ margin: 0 auto;
 .social-icon {
     width: 24px;
     height: 24px;
-    fill: #f4f4fd;
-}
+    }
 
 .icon,
 .social-icon {
     transition: fill 250ms ease;
-
-}
+    fill: #f4f4fd;
+  }
 
 .icon svg {
     width: 24px;
     height: 24px;
-}
+ }
