--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ body {
     background-color: #fff;
 }   
 
-/* #region Reset styles */
+
 
 h1, h2, h3, h4, h5, h6,
 p {
@@ -47,6 +47,14 @@ a {
 max-width: 1158px;
 padding: 0 15px;
 margin: 0 auto;
+display: flex;
+justify-content: center;
+align-items: center;
+height: 112px;
+backgtound-color: #f4f4fd;
+border-radius: 4px;
+border: 1px solid #8e8f99;
+margin-bottom: 8px;
  }
 
 .page-header {
