--- a/css/styles.css
+++ b/css/styles.css
@@ -47,14 +47,6 @@ a {
 max-width: 1158px;
 padding: 0 15px;
 margin: 0 auto;
-display: flex;
-justify-content: center;
-align-items: center;
-height: 112px;
-backgtound-color: #f4f4fd;
-border-radius: 4px;
-border: 1px solid #8e8f99;
-margin-bottom: 8px;
  }
 
 .page-header {
@@ -442,7 +434,7 @@ margin-bottom: 8px;
     margin: 0 auto;
     display: flex;
     align-items: baseline;
-
+}
 
 .footer-left {
         margin-right: 120px;
@@ -536,6 +528,7 @@ margin-bottom: 8px;
         margin-bottom: 8px;
     }
 
+      
              
 .icon-about {
     width: 64px;
