--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@
 
 body {
     font-family: "Roboto", sans-serif;
-    color: #434455;
+    color: var(--slate);
     background-color: #fff;
 }   
 
@@ -61,7 +61,7 @@ margin: 0 auto;
 
 .page-header {
     background-color: #fff;
-    border-bottom: 1px solid #e7e9fc;
+    border-bottom: 1px solid var(--cornflower);
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
                 0px 1px 1px rgba(46, 47, 66, 0.16),
                 0px 1px 6px rgba(46, 47, 66, 0.08);
@@ -82,18 +82,18 @@ margin: 0 auto;
         line-height: 1.17;
         letter-spacing: 0.03em;
         text-transform: uppercase;
-        color: #4d5ae5;
+        color: var(--iris);
         margin-right: 76px
 }
 
 .header-logo .logo-part {
-    color: #2e2f42;
+    color: var(--navy-blue);
     margin-right: 76px;
     padding: 24px 0;
 }
 
 .footer-logo .logo-part {
-    color: #f4f4fd;
+    color: var(--cloud);
   }
 
 .footer-logo {
@@ -103,7 +103,7 @@ margin: 0 auto;
 
 
 .page-footer {
-    background-color: #2e2f42;
+    background-color: var(--navy-blue);
     padding: 100px 0;
     margin: auto;
 }
@@ -121,7 +121,7 @@ margin: 0 auto;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #f4f4fd;
+    color: var(--cloud);
     max-width: 264px;
     padding-top: 16px;
 }
@@ -137,14 +137,14 @@ margin: 0 auto;
         font-size: 16px;
         line-height: 1.5;
         letter-spacing: 0.02em;
-        color: #2e2f42;
+        color: var(--navy-blue);
         padding: 24px 0;
         position: relative;
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-link.current {
-    color: #404bbf;
+    color: var(--ocean);
 }
 
 .nav-link.current::after {
@@ -154,7 +154,7 @@ margin: 0 auto;
     bottom: -1px;
     width: 100%;
     height: 4px;
-    background-color: #404bbf;
+    background-color: var(--ocean);
     border-radius: 2px;
 }
 
@@ -175,7 +175,7 @@ margin: 0 auto;
         font-size: 16px;
         line-height: 1.5;
         letter-spacing: 0.02em;
-        color: #434455;
+        color: var(--navy-blue);
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -183,12 +183,12 @@ margin: 0 auto;
 .nav-link:focus,
 .contacts-link:hover,
 .contacts-link:focus {
-    color:#404bbf;
+    color: var(--ocean);
 }
 
 
 .section-hero {
-        background-color: #2e2f42;
+        background-color: var(--navy-blue);
         max-width: 1440px;
         min-height: 600px;
         display: flex;
@@ -215,8 +215,8 @@ margin: 0 auto;
 }
 
 .button {
-   background-color: #4d5ae5;
-   color: #f4f4fd;
+   background-color: var(--iris);
+   color: var(--cloud);
    cursor: pointer;
    padding: 16px 32px;
    border: none;
@@ -239,7 +239,7 @@ margin: 0 auto;
 
 .button:hover,
 .button:focus {
-    background-color: #404bbf;
+    background-color: var(--ocean);
 }
 
 .visually-hidden {
@@ -258,7 +258,7 @@ margin: 0 auto;
       
 
 .section-gallery {
-    background-color: #F4F4FD;
+    background-color: var(--cloud);
     padding: 120px 0;
     text-align: center;
     }
@@ -270,14 +270,14 @@ margin: 0 auto;
     line-height: 1.11;
     letter-spacing: 0.02em;
     text-align: center;
-    color: #2e2f42;
+    color: var(--navy-blue);
     text-transform: capitalize;
     margin-bottom: 72px;
        }
 
 .card-info {
     padding: 32px 0;
-    border: 1px solid #e7e9fc;
+    border: 1px solid var(--cornflower);
     border-top: none;
 }
 
@@ -359,7 +359,7 @@ margin: 0 auto;
         font-size: 20px;
         line-height: 1.2;
         letter-spacing: 0.02em;
-        color: #2e2f42;
+        color: var(--navy-blue);
         margin-bottom: 8px;
          }
 .text {
@@ -368,7 +368,7 @@ margin: 0 auto;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #434455;
+    color: var(--slate);
 }         
 
 .section-portfolio {
@@ -418,8 +418,8 @@ margin: 0 auto;
     width: 100%;
     height: 100%;
     padding: 40px 32px;
-    background-color: #4d5ae5;
-    color: #f4f4fd;
+    background-color: var(--iris);
+    color: var(--cloud);
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
@@ -505,13 +505,13 @@ margin: 0 auto;
     border-radius: 50%;
     justify-content: center;
     align-items: center;
-    background-color: #4d5ae5;
+    background-color: var(--iris);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
    }
 
 .social-link:hover,
 .social-link:focus {
-    background-color: #404bbf;
+    background-color: var(--ocean);
     color: #ffffff;
 }
 
@@ -532,9 +532,9 @@ margin: 0 auto;
         height: 112px;
         width: 100%;
         max-width: 264px;
-        background-color: #f4f4fd;
+        background-color: var(--cloud);
         border-radius: 4px;
-        border: 1px solid #8e8f99;
+        border: 1px solid var(--light-slate);
         margin-bottom: 8px;
     }
 
@@ -558,7 +558,6 @@ margin: 0 auto;
 .social-icon {
     width: 24px;
     height: 24px;
-    fill: #46465e;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
@@ -575,7 +574,7 @@ margin: 0 auto;
  }
 
  .social-link svg {
-     fill: #f4f4fd;
+    fill: var(--cloud);
  }
 
  .social-link:hover .icon,
