--- a/css/styles.css
+++ b/css/styles.css
@@ -457,6 +457,7 @@ margin: 0 auto;
 
 .footer-social .social-link {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    color: var(--cloud);
 }
 
 .footer-social .social-link:hover,
@@ -516,7 +517,6 @@ margin: 0 auto;
 }
 
 .icon {
-    display: flex;
     width: 40px;
     height: 40px;
     border-radius: 50%;
@@ -571,13 +571,10 @@ margin: 0 auto;
 .icon svg {
     width: 24px;
     height: 24px;
-    fill: var(--cloud);
+    
  }
 
- .social-link svg {
-    fill: var(--cloud);
- }
-
+ 
  .social-link:hover .icon,
  .social-link:focus .icon,
  .social-link:hover .social-icon,
