--- a/css/styles.css
+++ b/css/styles.css
@@ -458,11 +458,16 @@ margin: 0 auto;
 .footer-social .social-link {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     color: var(--cloud);
+    background-color: var(--iris);
 }
 
-.footer-social .social-link:hover,
 .footer-social .social-link:focus {
     background-color: #31d0aa;
+}
+
+.footer-social .social-link:hover {
+    background-color: #31d0aa;
+    color: var(--white);
 }
 
 .footer-social .social-title {
@@ -508,6 +513,12 @@ margin: 0 auto;
     align-items: center;
     background-color: var(--iris);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    color: var(--cloud);
+   }
+
+   .social-link:hover,
+   .social-link:focus {
+       color: var(--white);
    }
 
 .social-link:hover,
@@ -522,8 +533,8 @@ margin: 0 auto;
     border-radius: 50%;
     justify-content: center;
     align-items: center;
-    transition: fill 0.3s ease;
-     }
+    transition: 0.3s ease;
+         }
 
 .icon-wrapper {
         display: flex;
@@ -545,7 +556,7 @@ margin: 0 auto;
     height: 64px;
 }
 
-.social-link:hover svg,
+
 .social-link:focus svg {
     fill: #ffffff;
 }
@@ -558,14 +569,12 @@ margin: 0 auto;
 .social-icon {
     width: 24px;
     height: 24px;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
+    }
 
 .icon,
 .social-icon {
-    fill: var(--cloud);
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-      }
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+          }
 
   
 .icon svg {
@@ -574,10 +583,12 @@ margin: 0 auto;
     
  }
 
- 
- .social-link:hover .icon,
- .social-link:focus .icon,
- .social-link:hover .social-icon,
- .social-link:focus .social-icon {
-    fill: var(--white);
+ .team-social-list .social-link {
+     background-color: var(--iris);
+     color: var(--cloud);
+ }
+
+ .team-social-list .social-link:hover {
+     background-color: var(--ocean);
+     color: var(--white);
  }
