--- a/css/styles.css
+++ b/css/styles.css
@@ -570,6 +570,7 @@ margin: 0 auto;
 .icon,
 .social-icon {
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    fill: var(--cloud);
           }
 
   
@@ -592,4 +593,9 @@ margin: 0 auto;
  .team-social-list .social-link:focus {
      background-color: var(--ocean);
      color: var(--white);
+ }
+
+ .icon use,
+ .social-icon use {
+    fill: currentColor;
  }
