--- a/css/styles.css
+++ b/css/styles.css
@@ -513,8 +513,7 @@ margin: 0 auto;
     align-items: center;
     background-color: var(--iris);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    color: var(--cloud);
-   }
+       }
 
   
 .social-link:hover,
@@ -524,8 +523,6 @@ margin: 0 auto;
 }
 
 .icon {
-    width: 40px;
-    height: 40px;
     border-radius: 50%;
     justify-content: center;
     align-items: center;
@@ -553,25 +550,17 @@ margin: 0 auto;
 }
 
 
-.social-link:focus svg {
-    fill: #ffffff;
-}
 
 .social-item {
  width: 40px;
  height: 40px;
    }
 
-.social-icon {
-    width: 24px;
-    height: 24px;
-    }
-
 .icon,
 .social-icon {
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     fill: var(--cloud);
-          }
+        }
 
   
 .icon svg {
@@ -582,12 +571,11 @@ margin: 0 auto;
 
  .team-social-list .social-link {
      background-color: var(--iris);
-     color: var(--cloud);
  }
 
  .team-social-list .social-link:hover {
      background-color: var(--ocean);
-     color: var(--white);
+     
  }
 
  .team-social-list .social-link:focus {
@@ -595,7 +583,4 @@ margin: 0 auto;
      color: var(--white);
  }
 
- .icon use,
- .social-icon use {
-    fill: currentColor;
- }
+ 
