--- a/css/styles.css
+++ b/css/styles.css
@@ -457,7 +457,6 @@ margin: 0 auto;
 
 .footer-social .social-link {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    color: var(--cloud);
     background-color: var(--iris);
 }
 
@@ -467,8 +466,7 @@ margin: 0 auto;
 
 .footer-social .social-link:hover {
     background-color: #31d0aa;
-    color: var(--white);
-}
+    }
 
 .footer-social .social-title {
     margin-bottom: 16px;
@@ -480,8 +478,7 @@ margin: 0 auto;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #ffffff;
-}
+    }
 
 
 
@@ -511,7 +508,6 @@ margin: 0 auto;
     border-radius: 50%;
     justify-content: center;
     align-items: center;
-    background-color: var(--iris);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
        }
 
@@ -558,17 +554,21 @@ margin: 0 auto;
 
 .icon,
 .social-icon {
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     fill: var(--cloud);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
         }
 
-  
-.icon svg {
+.icon {
+    width: 16px;
+    height: 16px;
+}
+
+
+.social-icon {
     width: 24px;
     height: 24px;
-    
- }
-
+}
+        
  .team-social-list .social-link {
      background-color: var(--iris);
  }
@@ -580,7 +580,6 @@ margin: 0 auto;
 
  .team-social-list .social-link:focus {
      background-color: var(--ocean);
-     color: var(--white);
- }
+      }
 
  
